<resources>
    <string name="app_name">PRIMEBLEND</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_evaluacion">EvaluacionActivity</string>
    <string name="title_activity_catalogo">CatalogoActivity</string>
    <string name="title_activity_cotizador">CotizadorActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="evaluacion">Evaluación</string>
    <string name="catalogo">Catálogo</string>
    <string name="cotizador">Cotizador</string>
    <string name="calendario">Calendario</string>

    <!-- Evaluation process -->
    <string name="register">Registrame</string>
    <string name="already_register">Ya estoy registrado</string>
    <string name="intro_register">Ayúdanos completando tus datos y pronto recibirás información exclusiva de Prime Blend \n \n ¡Gracias!</string>
    <string name="name_hint">NOMBRE</string>
    <string name="mail_hint">E_MAIL</string>
    <string name="phone_hint">TELÉFONO</string>
    <string name="ocupation_hint">PROFESIÓN</string>
    <string name="interested">En qué línea estás interesado:</string>
    <string name="send">Enviar</string>
    <string name="help_us">Ayúdanos completando esta encuesta de calidad de servicio, solo debes registrar tu e-mail con el que te registraste \n \n ¡Gracias!</string>
    <string name="next">Siguiente</string>
    <!-- Survey -->
    <string name="q1">1) ¿Comó se enteró de nosotros?</string>
    <string name="media">Medios:</string>
    <string name="q2">2) En general, ¿Comó considera la calidad de nuestra atención</string>
    <string name="q3">3) ¿Recomendaría nuestra sala de exhibición?</string>
    <string name="why_hint">¿Por qué?</string>
    <string name="q4">4) ¿Le gustaría información acerca de nuestras actividades y productos?</string>
    <string name="comment_hint">COMENTARIOS:</string>
    <string name="privacy_text">Política de privacidad \n \n Para consultar nuestra política de privacidad puede accesar \n directamente
                        en nuestra pagina oficial</string>
    <string name="privacy_url">www.primeblend.com.mx</string>
    <string name="q1_op1">Restaurante</string>
    <string name="q1_op2">Evento</string>
    <string name="q1_op3">Referido</string>
    <string name="media_op1">Digital</string>
    <string name="media_op2">Impreso</string>
    <string name="media_op3">Otro</string>
    <string name="q2_op1">Excelente</string>
    <string name="q2_op2">Bueno</string>
    <string name="q2_op3">Regular</string>
    <string name="q2_op4">Malo</string>
    <string name="q2_op5">Muy Malo</string>
    <string name="op_yes">Sí</string>
    <string name="op_no">No</string>
    <string name="purchase">¿Realizaste alguna compra?</string>
    <string name="purchase_q1">1) ¿Qué marca compró?</string>
    <string name="other_hint">Otro</string>
    <string name="amount_hint">Monto</string>
    <string name="despacho">2) Despacho distribuidor encargado del diseño de la cocina</string>
    <string name="sucursal">3) Sucursal</string>
    <string name="salesman">4) Vendedor Responsable</string>

    <!-- Catalog and cotizador process -->
    <string name="coccion">Cocción</string>
    <string name="refrigeracion">Refrigeración</string>
    <string name="ventilacion">Ventilación</string>
    <string name="lavavajillas">Lavavajillas</string>


    <!-- Calendar process -->
    <string name="calendar_intro">¿A que evento asististe?</string>
    <string name="calendar_question">Deseas recibir informacion sobre fututos eventos</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="existing_user">Ya existe un registro previo con este email</string>
    <string name="not_existing_user">No existe un registro previo con este email</string>
    <string name="invalid_email">Formato de Email invalido!</string>
    <string name="error">Hubo un problema con el registro, vuelve a intentarlo por favor!</string>

    <string name="ficha_tecnica">Ficha Técnica:</string>
    <string name="precio">Precio:</string>
    <string name="add_balance">AGREGAR A COTIZACIÓN</string>
    <string name="view_product">VER MÁS PRODUCTOS</string>
    <string name="go_balance">IR A COTIZACIÓN</string>

    <string name="cantidad">Cantidad</string>
    <string name="costo">Costo</string>
    <string name="send_mail">ENVIAR POR E-MAIL</string>

    <string name="descuento_cotizacion">DESCUENTO:</string>
    <string name="descuento_hint">Descuento (%)</string>
    <string name="total_cotizacion">TOTAL: $%1$s</string>
    <string name="tipo_cambio">Tipo de cambio: US Dollar = %1$s peso mexicano*</string>

    <string name="privacy_policy">Mabe, S.A. de C.V. con domicilio en Av. De las Palmas #100 Col. Lomas de Chapultepec, C.P. 11000, Miguel Hidalgo, México, D.F., es responsable de recabar sus datos personales, del uso que se le dé a los mismos y de su protección. \n
Su información personal será utilizada para proveer los servicios y productos que ha solicitado, informarle sobre cambios en los mismos y evaluar la calidad del servicio que le brindamos.\n
\n
Usted tiene derecho de acceder, rectificar y cancelar sus datos personales, así como de oponerse al tratamiento de los mismos o revocar el consentimiento que para tal fin nos haya otorgado, a través de los procedimientos que hemos implementado.\n
Si usted desea dejar de recibir mensajes promocionales de nuestra parte puede solicitarlo a través de un correo electrónico a <u>maria.huerta@mabe.com.mx</u></string>

    <string name="error_checkout">Ocurrio un problema al momento de enviar el email, por favor intentalo nuevamente</string>
    <string name="seller_name">NOMBRE DEL VENDEDOR</string>
    <string name="seller_email">E-MAIL DEL VENDEDOR</string>

    <string name="register_mail">Ahora estas registrado y recibiras información de nuestros proximos eventos</string>
    <string name="mail_sent">Tu email se ha enviado</string>
    <string name="logout">Deseas salir de la sesión actual?</string>
    <string name="confirmation">Su cotización fue enviada de manera exitosa!!</string>
</resources>
