<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manguitostudios.primeblend.fragments.EvaluacionFirstFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/container"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/transparency"/>

    <LinearLayout
        android:id="@+id/surveyPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparency_white"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:orientation="horizontal"
            android:id="@+id/q1">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q1_op1"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q1_op2"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q1_op3"/>
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:textAllCaps="true"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparency_white"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:orientation="horizontal"
            android:id="@+id/q_media">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/media_op1"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/media_op2"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/transparency_white"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin">

            <RadioButton android:id="@+id/q1_other"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/media_op3"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/small_separation"
                android:layout_marginEnd="@dimen/small_separation"/>

            <EditText
                android:id="@+id/other_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_separation"
                android:layout_marginStart="@dimen/small_separation"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"/>

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparency_white"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:orientation="horizontal"
            android:id="@+id/q2">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q2_op1"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q2_op2"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q2_op3"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q2_op4"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/q2_op5"/>
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparency_white"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:orientation="horizontal"
            android:id="@+id/q3">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/op_yes"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/op_no"/>
        </RadioGroup>

        <EditText
            android:id="@+id/q3_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:layout_marginTop="20dp"
            android:background="@color/transparency_white"
            android:hint="@string/why_hint"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:gravity="top"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="@color/buttonColor"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="true"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/surveyPart2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparency_white"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:orientation="horizontal"
            android:id="@+id/q4">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/op_yes"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/op_no"/>
        </RadioGroup>

        <EditText
            android:id="@+id/q4_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:background="@color/transparency_white"
            android:hint="@string/comment_hint"
            android:inputType="textMultiLine"
            android:minLines="10"
            android:gravity="top"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_text"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_url"
            android:textColor="@color/buttonColor"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <Button
            android:id="@+id/next2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="@color/buttonColor"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textAllCaps="true"/>


    </LinearLayout>



</RelativeLayout>