<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/container"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/transparency"/>

    <LinearLayout
        android:id="@+id/list"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/internal_margin"
        android:layout_marginStart="@dimen/internal_margin"
        android:layout_marginRight="@dimen/internal_margin"
        android:layout_marginEnd="@dimen/internal_margin">

        <TextView
            android:id="@+id/origin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/cotizador"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/internal_margin"
                android:layout_marginStart="@dimen/internal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/costo"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/internal_margin"
                android:layout_marginEnd="@dimen/internal_margin"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:id="@+id/recyclerView"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/descuento_cotizacion"
                android:gravity="right"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/internal_margin"
                android:layout_marginStart="@dimen/internal_margin"
                android:layout_marginRight="@dimen/small_separation"
                android:layout_marginEnd="@dimen/small_separation"/>

            <EditText
                android:id="@+id/descuento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cantidad"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_gravity="right"
                android:textSize="15sp"
                android:padding="5dp"
                android:background="@color/buttonColor"
                android:inputType="number"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"/>

        </LinearLayout>



        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cotizacion"
            android:textColor="@color/white"
            android:gravity="right"
            android:textSize="20sp"
            android:background="@color/buttonColor"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tipo_cambio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_cambio"
            android:layout_gravity="right"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewProducts"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/view_product"
                android:background="@color/buttonColor"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/internal_margin"
                android:layout_marginStart="@dimen/internal_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/sendMail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/send_mail"
                android:background="@color/buttonColor"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/internal_margin"
                android:layout_marginEnd="@dimen/internal_margin"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sellerData"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/internal_margin"
        android:layout_marginStart="@dimen/internal_margin"
        android:layout_marginRight="@dimen/internal_margin"
        android:layout_marginEnd="@dimen/internal_margin">

        <EditText
            android:id="@+id/sellerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:background="@color/transparency_white"
            android:hint="@string/seller_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <EditText
            android:id="@+id/sellerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seller_email"
            android:textColor="@color/text_gray"
            android:background="@color/transparency_white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/internal_margin"
            android:layout_marginStart="@dimen/internal_margin"
            android:layout_marginRight="@dimen/internal_margin"
            android:layout_marginEnd="@dimen/internal_margin"/>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/buttonColor"
            android:text="@string/send"
            android:textColor="@color/white"/>


    </LinearLayout>



</RelativeLayout>